board 턴 진행 동작 완료

--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -13,4 +13,9 @@
   padding: 0;
   text-align: center;
   border: 1px solid #000000;
+  cursor: pointer;
+}
+
+.board > tr > td:hover {
+  background-color: rgb(240, 240, 240);
 }
