siebar goBack 로직 구현 완료

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,3 +1,14 @@
 .sidebar {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.sidebar > h4 {
+  margin: 10px 0px;
+}
+
+.sidebar > button {
+  cursor: pointer;
 }
