--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,3 +1,10 @@
+.board-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .board {
   width: 340px;
 }
@@ -18,4 +25,8 @@
 
 .board > tr > td:hover {
   background-color: rgb(240, 240, 240);
+}
+
+.alert.off {
+  display: none;
 }
